--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ optimal performance.</p>
 </div>
 </div>
 <div class="scare">
-<video id="video" class="video" src="media/video.mp4" loop></video>
+<video id="video" class="video" src="media/Video.Guru_20241127_022527051.mp4" loop></video>
 </div>
 <script type="text/javascript">
             const video = document.getElementById("video");
